force-app/main/default/objects/Triggered_Data__c/Triggered_Data__c.object-meta.xml
<CustomObject>
    <description>An object used to catch customer workflow triggers from the EDM/IT data loads.</description>
    <label>Triggered Data</label>
    <nameField>
        <displayFormat>TD-{000000000}</displayFormat>
        <label>Triggered Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triggered Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>