force-app/main/default/objects/Triggered_Data__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user to be assigned the task created from the trigger.</description>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Triggered_Data</relationshipName>
    <type>Lookup</type>
</CustomField>