force-app/main/default/objects/Triggered_Data__c/fields/Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Number__c</fullName>
    <description>The bank number of the customer related to the triggered data record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>