force-app/main/default/objects/Triggered_Data__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>A master-detail relationship to the customer record for the trigger</description>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Triggered Data</relationshipLabel>
    <relationshipName>Triggered_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>