force-app/main/default/objects/Triggered_Data__c/fields/External_ID_Combo__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Combo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID Combo</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>