force-app/main/default/objects/Triggered_Data__c/fields/Related_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Financial_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Financial Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>