force-app/main/default/objects/Triggered_Data__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <description>A code indicating which process flow should be activated by the trigger</description>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCNCW</fullName>
            </value>
            <value>
                <fullName>MPYFF</fullName>
            </value>
            <value>
                <fullName>ARMAJ</fullName>
            </value>
            <value>
                <fullName>TXIND</fullName>
            </value>
            <value>
                <fullName>TXINC</fullName>
            </value>
            <value>
                <fullName>REFI19</fullName>
            </value>
            <value>
                <fullName>REF19</fullName>
                <isActive>false</isActive>
                <label>REF19</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>